# MonteCarloCooperativeGames

./: .Rbuildignore  .gitignore  Airport_Game.R  Airport_Game_Shapley_Values.csv  ApproOwen.R  ApproShapley.R  Banzhaf-Owen.R  ConfidenceBanzhaff.R  ConfidenceShapleyShubik.R  DESCRIPTION  GMP_Tests.R  NAMESPACE  NEWS.md  PresentationSkriptTim.R  README.Rmd  README.md  Simple_random_sampling_with_replacement.R  Simple_random_sampling_without_replacement.R  St-ApproOwen and Banzhaf-Owen.R  St-ApproShapley.R  Systematic_sampling.R  Two-Stage ApproBanzhaf-Owen.R  Two-Stage-St-ApproShapley-opt-v.2.R  Two-Stage-St-ApproShapley-opt.R  Two-Stage-St-ApproShapley-opt_Airport.R  compareImplementations.R  fromNumberToBinaryIndices.R  twoStageStApproShapleyOptCor.R
MonteCarloCooperativeGames/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.Rmd  README.md
MonteCarloForCoopGames/: DESCRIPTION  NAMESPACE  README.Rmd  README.md
R/: airportGameForSampling.R  approOwen.R  approOwenAntithetic.R  approShapley.R  approShapleyAntithetic.R  bankruptcyGameForSampling.R  buildAirportCostVector.R  calculateErrorMetrics.R  checkCommonParameter.R  coalitionFromIndex.R  confidenceBanzhaf.R  confidenceShapleyShubik.R  ergodicSamplingGreedyK2.R  fromICoalitionToCoalition.R  gloveGameForSampling.R  pre.R  simpleRandomSamplingWithReplacement.R  simpleRandomSamplingWithReplacementAntithetic.R  simpleRandomSamplingWithoutReplacement.R  stApproOwenAndBanzhafOwen.R  stApproOwenAntithetic.R  stApproShapley.R  stApproShapleyAntithetic.R  subsetFromIndex.R  systematicSampling.R  (+7 more)
cpp/: CMakeLists.txt  main.cpp
(+233 files in other folders)
